--- a/notebook-traffic-chatbot.ipynb
+++ b/notebook-traffic-chatbot.ipynb
@@ -7,7 +7,7 @@
     "<center>\n",
     "    <h1>Handling of traffic-chatbot data</h1>\n",
     "    <h3>By Armando Medina</h3>\n",
-    "    <img src=\"data/logo.png\" with=\"124\" height=\"140\" />\n",
+    "    <img src=\"https://github.com/ketcx/demo-traffic-bot/blob/master/data/logo.png\" with=\"124\" height=\"140\" />\n",
     "</center>"
    ]
   },
